fix: dark mode switch
- fixed responsivity
- theme
- navbar scrolling

--- a/src/app/components/footer/footer.component.scss
+++ b/src/app/components/footer/footer.component.scss
@@ -1,6 +1,11 @@
 #personal-logo {
   filter: invert(43%) sepia(64%) saturate(4588%) hue-rotate(240deg) brightness(99%) contrast(104%);
   -webkit-filter: invert(43%) sepia(64%) saturate(4588%) hue-rotate(240deg) brightness(99%) contrast(104%);
+  transition: 0.3s ease-in;
+}
+
+#personal-logo:hover {
+  opacity: .5;
 }
 
 li i {
